--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./src/assets/quapp-sdk.js"></script>
+    <script src="./public/quapp-sdk.js"></script>
     <script>window.Quapp = Quapp;</script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
